# Summer_2021

./: README.md
CMakeA1_1/: CMakeLists.txt  example_walk.cpp
CMakeA1_LibRealSense_1/: CMakeLists.txt  measure_walk.cpp
CMakeLibRealSense_2/: CMakeLists.txt  measure_dist.cpp
CMakeOpenCV/: CMakeLists.txt
CMakeOpenCV1/: rs-capture.cpp
CMakeOpenCV2/: CMakeLists.txt
CMakeOpenCV3/: CMakeLists.txt  rs-capture.cpp
